@@ -1,3 +1,8 @@
+2007-02-28  Peter Williams  <peter@newton.cx>
+
+	* omega/util.py (makeQuickPipeline): RectDataPainter and RectPlot
+	are no longer in the 'base' module.
+
 2007-02-24  Peter Williams  <peter@newton.cx>
 
 	* omega/layout.py (RightRotationPainter.configurePainting): Whoa!
